crud comments + ajax search

--- a/src/GithubBundle/Resources/views/Default/index.html.twig
+++ b/src/GithubBundle/Resources/views/Default/index.html.twig
@@ -1,1 +1,41 @@
-Hello World!
+{% extends 'base.html.twig' %}
+
+{% block body %}
+
+    <h1 class="inline-title">Recherche Github</h1>
+    <div class="row">
+        <div class="col-sm-3 mt10 pull-right">
+            <input type="text" class="form-control" id="search-field" name="search" aria-controls="table" placeholder="Rechercher...">
+        </div>
+    </div>
+    <hr>
+
+    <div class="row">
+        <div id="items_list">
+            {% include 'GithubBundle:Default:list.html.twig' %}
+        </div>
+    </div>
+
+
+
+{% endblock body %}
+
+{% block js %}
+    <script type="text/javascript">
+
+        $('#search-field').on('input', function (req) {
+            let search = $("input[type=text][name=search]").val();
+            console.log(search);
+            $.ajax({
+                url: '{{path('search_item')}}',
+                method: 'POST',
+                data: {search: search}
+            }).done(function (response) {
+                console.log(response);
+                $('#items_list').html(response);
+            }).fail(function (response) {
+                console.log('error');
+            });
+        });
+    </script>
+{% endblock js %}
