--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -9,9 +9,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
         {% block stylesheets %}
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+
             <!-- Appel CSS Boostrap -->
-            <!-- Font Google -->
+            <link rel="stylesheet" href="{{ asset ('bundles/github/css/bootstrap.min.css') }}"/>
+            <link rel="stylesheet" href="{{ asset ('bundles/github/css/bootstrap-theme.min.css') }}"/>
+            <link rel="stylesheet" href="{{ asset ('bundles/github/css/font-awesome.css') }}"/>
+
         {% endblock %}
     </head>
 
@@ -39,12 +42,14 @@
         </div>
 
         {% block body %}{% endblock %}
-
         {% block javascripts %}
-        <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
-        {% endblock %}
+            <!-- Appel Jquery -->
+            <script src="{{ asset ('bundles/github/js/jquery-3.0.0.min.js') }}"></script>
+            <script src="{{ asset ('bundles/github/js/jquery-2.0.0.min.js') }}"></script>
 
+            <!-- Appel JavaScript Bootstrap -->
+            <script src="{{ asset ('bundles/github/js/bootstrap.min.js') }}"></script>
+        {% endblock %}
+        {% block js %}{% endblock %}
     </body>
 </html>
