--- a/src/UserBundle/Resources/views/Registration/confirmed.html.twig
+++ b/src/UserBundle/Resources/views/Registration/confirmed.html.twig
@@ -1,5 +1,5 @@
 {% extends "FOSUserBundle::layout.html.twig" %}
 
 {% block fos_user_content %}
-<a href='{{ path('github_homepage')}}'>Commencez</a>
+<a href='{{ path('github_homepage')}}'>Votre compte a bien été créé, cliquer ici pour vous connecter</a>
 {% endblock fos_user_content %}
